WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
118377
[Coordinated Graphics] Don't use && operator in ASSERT
https://bugs.webkit.org/show_bug.cgi?id=118377
Summary
[Coordinated Graphics] Don't use && operator in ASSERT
Jae Hyun Park
Reported
2013-07-03 22:27:26 PDT
We don't use && operator in ASSERT because it's impossible to know which condition caused the assertion.
Attachments
Patch
(2.71 KB, patch)
2013-07-03 22:29 PDT
,
Jae Hyun Park
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jae Hyun Park
Comment 1
2013-07-03 22:29:33 PDT
Created
attachment 206051
[details]
Patch
WebKit Commit Bot
Comment 2
2013-07-03 23:45:44 PDT
Comment on
attachment 206051
[details]
Patch Clearing flags on attachment: 206051 Committed
r152390
: <
http://trac.webkit.org/changeset/152390
>
WebKit Commit Bot
Comment 3
2013-07-03 23:45:47 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug