[Coordinated Graphics] Don't use && operator in ASSERT https://bugs.webkit.org/show_bug.cgi?id=118377

Patch by Jae Hyun Park <jae.park@company100.net> on 2013-07-03
Reviewed by Noam Rosenthal.

We don't use && opeartor in ASSERT because it's impossible to know which
condition caused the assertion.

* platform/graphics/texmap/coordinated/CoordinatedBackingStore.cpp:
(WebCore::CoordinatedBackingStoreTile::swapBuffers):
* platform/graphics/texmap/coordinated/CoordinatedGraphicsLayer.cpp:
(WebCore::CoordinatedGraphicsLayer::~CoordinatedGraphicsLayer):

Canonical link: https://commits.webkit.org/136384@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@152390 268f45cc-cd09-0410-ab3c-d52691b4dbfc